# makeathon-challenge-2026-xylemx

./: .gitignore  Makefile  README.md  download_data.py  predict.py  preprocess.py  preprocess_snapshot_pair.py  preprocessing_leaderboard.py  preprocessing_single_2025.py  preprocessing_single_2025_robust.py  preprocessing_temporal.py  preprocessing_temporal_hq.py  pyproject.toml  requirements.txt  train_leaderboard.py  train_single_2025.py  train_single_2025_robust.py  train_snapshot_pair.py  train_temporal.py  train_temporal_hq.py
configs/: baseline.yaml
docs/: README.md  baseline-pipeline.md  pipeline-overview.md  project-technical-guide.md  weak-label-fusion.md
hackathon/: submission_utils.py
jobs/: README.md  predict_all_models.slurm  predict_val.slurm  preprocess.slurm  run_all_models_gpu_local.sh  run_all_models_local.sh  submit_all_and_predict.sh  submit_all_models.sh  train_all_models.slurm  train_baseline.slurm  train_coatnet.slurm  train_convnext.slurm  train_convnext_v2.slurm  train_resnet18.slurm  train_vgg.slurm
scripts/: generate_model_architecture_diagrams.py  generate_professional_visuals.py  make_submission.py  optimize_content_images.py  predict.py  preprocess.py  preprocess_snapshot_pair.py  preprocessing_leaderboard.py  preprocessing_single_2025.py  preprocessing_single_2025_robust.py  preprocessing_temporal.py  preprocessing_temporal_hq.py  run_all_models_gpu.sh  train.py  train_leaderboard.py  train_single_2025.py  train_single_2025_robust.py  train_snapshot_pair.py  train_temporal.py  train_temporal_hq.py
tests/: test_config_parsing.py  (+6 more)
(+35 files in other folders)
